<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--Здесь мы подключаем выдвижной ToolBar -->
    <!--ShowIn означает показать наше меню в Navigation View -->
    <item android:title="@string/ad_title">
        <menu>
            <item
                android:id="@+id/id_my_ads"
                android:title="@string/ad_my_ads" />
            <item
                android:id="@+id/id_cars"
                android:title="@string/ad_car" />
            <item
                android:id="@+id/id_pc"
                android:title="@string/ad_pc" />
            <item
                android:id="@+id/id_smartphone"
                android:title="@string/ad_smartphone" />
            <item
                android:id="@+id/id_appliances"
                android:title="@string/ad_appliances" />
        </menu>
    </item>

    <item android:title="@string/ad_account">
        <menu>
            <item
                android:id="@+id/id_signe_up"
                android:title="@string/ac_signe_up" />
            <item
                android:id="@+id/id_signe_in"
                android:title="@string/ac_signe_in" />
            <item
                android:id="@+id/id_signe_out"
                android:title="@string/ac_signe_out" />
        </menu>
    </item>
</menu>