<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/sign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/ac_signe_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogMassage"
        android:layout_width="0dp"
        android:text="@string/dialog_reset_email_message"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center_horizontal"
        android:textColor="#CF0303"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/sign_email"
        app:layout_constraintStart_toStartOf="@+id/sign_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_title"

        />

    <EditText
        android:id="@+id/sign_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edt"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_title" />


    <EditText
        android:id="@+id/sign_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_edt"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/sign_email"
        app:layout_constraintStart_toStartOf="@id/sign_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_email" />

    <Button
        android:id="@+id/btSignUpIn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_btn"
        android:text="@string/sign_up_action"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/sign_email"
        app:layout_constraintStart_toStartOf="@+id/sign_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_password" />

    <Button
        android:id="@+id/btForgetPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/background_btn"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sign_email"
        app:layout_constraintStart_toStartOf="@+id/sign_email"
        app:layout_constraintTop_toBottomOf="@id/btSignUpIn" />

</androidx.constraintlayout.widget.ConstraintLayout>